Home page (sections 8 of 9). Code refactoring

--- a/app/page-home.html
+++ b/app/page-home.html
@@ -189,66 +189,64 @@
 		<div class="container">
 			<h1 class="h-about-title text-xxl"><span class="text-orange">aplitka.ru</span> — керамическая плитка и керамогранит от ведущих мировых брендов</h1>
 
-			<!-- Tabs & Accordion-->
-			<div class="tabs-accordion mt-48">
+			<!-- Tabs -->
+			<div class="nav nav-tabs" role="tablist">
+				<a id="tab-1" href="#about-tab-1" class="nav-link active" data-toggle="tab" role="tab">Нам доверяют</a>
+				<a id="tab-2" href="#about-tab-2" class="nav-link" data-toggle="tab" role="tab">Удобно выбирать</a>
+				<a id="tab-2" href="#about-tab-3" class="nav-link" data-toggle="tab" role="tab">Как сделать заказ</a>
+				<a id="tab-2" href="#about-tab-4" class="nav-link" data-toggle="tab" role="tab">Способы оплаты</a>
+				<a id="tab-2" href="#about-tab-5" class="nav-link" data-toggle="tab" role="tab">Способы доставки</a>
+				<a id="tab-2" href="#about-tab-6" class="nav-link" data-toggle="tab" role="tab">Акции и скидки</a>
+			</div>
 
-				<!-- Tabs -->
-				<div class="nav nav-tabs nav-tabs--dark" role="tablist">
-					<a id="tab-1" href="#about-tab-1" class="nav-link active" data-toggle="tab" role="tab">Нам доверяют</a>
-					<a id="tab-2" href="#about-tab-2" class="nav-link" data-toggle="tab" role="tab">Удобно выбирать</a>
-					<a id="tab-2" href="#about-tab-3" class="nav-link" data-toggle="tab" role="tab">Как сделать заказ</a>
-					<a id="tab-2" href="#about-tab-4" class="nav-link" data-toggle="tab" role="tab">Способы оплаты</a>
-					<a id="tab-2" href="#about-tab-5" class="nav-link" data-toggle="tab" role="tab">Способы доставки</a>
-					<a id="tab-2" href="#about-tab-6" class="nav-link" data-toggle="tab" role="tab">Акции и скидки</a>
-				</div>
+			<!-- Tabs content -->
+			<div class="tab-content" role="tablist">
 
-				<!-- Tabs content -->
-				<div class="tab-content" role="tablist">
-
-					<!-- Tab #1 -->
-					<div id="about-tab-1" class="tab-pane fade show active" role="tabpanel">
-						<div class="row">
-							<div class="col-3">
-								<div class="h-about-text">
-									<h4>На рынке продаж стройматериалов с 2007 года</h4>
-									<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
-								</div>
-							</div>
-							<div class="col-3">
-								<div class="h-about-text">
-									<h4>Выполняем более 2000 заказов в месяц</h4>
-									<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
-								</div>
-							</div>
-							<div class="col-6">
-								<img src="images/h-about.jpg" alt="Нам доверяют">
+				<!-- Tab #1 -->
+				<div id="about-tab-1" class="tab-pane fade show active" role="tabpanel">
+					<div class="row">
+						<div class="col-3">
+							<div class="h-about-text">
+								<h4>На рынке продаж стройматериалов с 2007 года</h4>
+								<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
 							</div>
 						</div>
-					</div><!-- /.tab-pane -->
-
-					<!-- Tab #2 -->
-					<div id="about-tab-2" class="tab-pane fade" role="tabpanel">
-						<div class="row">
-							<div class="col-3">
-								<div class="h-about-text">
-									<h4>Выполняем более 2000 заказов в месяц</h4>
-									<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
-								</div>
-							</div>
-							<div class="col-3">
-								<div class="h-about-text">
-									<h4>На рынке продаж стройматериалов с 2007 года</h4>
-									<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
-								</div>
-							</div>
-							<div class="col-6">
-								<img src="images/h-about.jpg" alt="Нам доверяют">
+						<div class="col-3">
+							<div class="h-about-text">
+								<h4>Выполняем более 2000 заказов в месяц</h4>
+								<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
 							</div>
 						</div>
-					</div><!-- /.tab-pane -->
+						<div class="col-6">
+							<img src="images/h-about.jpg" alt="Нам доверяют">
+						</div>
+					</div>
+				</div><!-- /.tab-pane -->
 
-				</div><!-- /.tab-content -->
-			<!-- End Tabs & Accordion-->
+				<!-- Tab #2 -->
+				<div id="about-tab-2" class="tab-pane fade" role="tabpanel">
+					<div class="row">
+						<div class="col-3">
+							<div class="h-about-text">
+								<h4>Выполняем более 2000 заказов в месяц</h4>
+								<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
+							</div>
+						</div>
+						<div class="col-3">
+							<div class="h-about-text">
+								<h4>На рынке продаж стройматериалов с 2007 года</h4>
+								<p class="text-300">Мы ценим доверие каждого клиента. Заказы обрабатываются в максимально короткие сроки. Персональный менеджер ведет заказ от оформления до доставки товара клиенту.</p>
+							</div>
+						</div>
+						<div class="col-6">
+							<img src="images/h-about.jpg" alt="Нам доверяют">
+						</div>
+					</div>
+				</div><!-- /.tab-pane -->
+
+			</div>
+			<!-- End Tabs content -->
+
 		</div><!-- /.container -->
 	</section>
 
@@ -260,7 +258,7 @@
 				<a href="#" class="btn btn-corner">Все производители</a>
 			</div>
 
-			<div class="h-brands-slider swiper-slider">
+			<div class="h-brands-slider brands-slider swiper-slider">
 				<!-- Slider content -->
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
@@ -416,6 +414,224 @@
 					<div class="swiper-pagination"></div>
 				</div>
 			</div><!-- /.h-brands-slider -->
+		</div><!-- /.container -->
+	</section>
+
+	<!-- Section: Popular products -->
+	<section class="h-products section mt-80">
+		<div class="container">
+			<div class="section-heading">
+				<h2 class="title">Популярные товары</h2>
+				<a href="#" class="btn btn-corner">Все товары</a>
+			</div>
+
+			<!-- Tabs -->
+			<div class="nav nav-tabs nav-tabs--centered" role="tablist">
+				<a id="tab-1" href="#products-tab-1" class="nav-link active" data-toggle="tab" role="tab">Плитка</a>
+				<a id="tab-2" href="#products-tab-2" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
+				<a id="tab-2" href="#products-tab-3" class="nav-link" data-toggle="tab" role="tab">Плитка для кухни</a>
+			</div>
+
+			<!-- Tabs content -->
+			<div class="tab-content" role="tablist">
+
+				<!-- Tab #1 -->
+				<div id="products-tab-1" class="tab-pane fade show active" role="tabpanel">
+					<div class="products-slider swiper-slider">
+						<!-- Slider content -->
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+							</div>
+							<!-- Slider navigation -->
+							<div class="products-slider-nav swiper-nav">
+								<button class="swiper-button-prev btn">
+									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+								</button>
+								<button class="swiper-button-next btn">
+									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+								</button>
+							</div>
+						</div>
+						<!-- Slider dots -->
+						<div class="products-slider-dots swiper-dots">
+							<div class="swiper-pagination"></div>
+						</div>
+					</div><!-- /.products-slider -->
+				</div><!-- /.tab-pane -->
+
+				<!-- Tab #2 -->
+				<div id="products-tab-2" class="tab-pane fade" role="tabpanel">
+					<div class="products-slider swiper-slider">
+						<!-- Slider content -->
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-1.html')
+								</div><!-- /.slide -->
+								<div class="swiper-slide">
+									@@include('parts/product-cards/product-2.html')
+								</div><!-- /.slide -->
+							</div>
+							<!-- Slider navigation -->
+							<div class="products-slider-nav swiper-nav">
+								<button class="swiper-button-prev btn">
+									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+								</button>
+								<button class="swiper-button-next btn">
+									<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+								</button>
+							</div>
+						</div>
+						<!-- Slider dots -->
+						<div class="products-slider-dots swiper-dots">
+							<div class="swiper-pagination"></div>
+						</div>
+					</div><!-- /.products-slider -->
+				</div><!-- /.tab-pane -->
+
+			</div>
+			<!-- End Tabs content -->
+
+		</div><!-- /.container -->
+	</section>
+
+	<!-- Section: Stores contacts -->
+	<section class="h-stores mt-80">
+		<div class="container">
+			<div class="section-heading">
+				<h2 class="title">Адреса салонов</h2>
+				<a href="#" class="btn btn-corner">Наши контакты</a>
+			</div>
+			<div class="row">
+				<div class="col-4">
+					<div class="h-stores-item">
+						<div class="number">1</div>
+						<h5 class="title text-lg">Магазин — Волоколамское шоссе</h5>
+						<div class="adress">г. Москва, инд.: 125371, ул. Волоколамское шоссе, д. 116, стр. 1</div>
+						<div class="phone">
+							<a href="tel:+74952255096">+7 (495) 225-50-96</a>
+						</div>
+						<div class="email">
+							<a href="mailto:zakaz@aplitka.ru">zakaz@aplitka.ru</a>
+						</div>
+						<div class="hours">Режим работы: с 10:00 до 20:00</div>
+						<div class="location">
+							<a href="#" target="_blank" rel="nofollow noopener">Как проехать</a>
+						</div>
+					</div>
+				</div><!-- /.col -->
+				<div class="col-4">
+					<div class="h-stores-item">
+						<div class="number">2</div>
+						<h5 class="title text-lg">Магазин — Калужское шоссе</h5>
+						<div class="adress">г. Москва, инд.: 108841, ул. Калужское шоссе, д. 4, стр. 9</div>
+						<div class="phone">
+							<a href="tel:+74952255096">+7 (495) 225-50-96</a>
+						</div>
+						<div class="email">
+							<a href="mailto:zakaz@aplitka.ru">zakaz@aplitka.ru</a>
+						</div>
+						<div class="hours">Режим работы: с 10:00 до 20:00</div>
+						<div class="location">
+							<a href="#" target="_blank" rel="nofollow noopener">Как проехать</a>
+						</div>
+					</div>
+				</div><!-- /.col -->
+			</div><!-- /.row -->
+		</div><!-- /.container -->
+	</section>
+
+	<!-- Section: News & Articles -->
+	<section class="h-articles mt-80">
+		<div class="container">
+
+			<!-- Tabs -->
+			<div class="nav nav-tabs nav-tabs--centered" role="tablist">
+				<a id="tab-1" href="#articles-tab" class="nav-link active" data-toggle="tab" role="tab">Новости</a>
+				<a id="tab-2" href="#news-tab" class="nav-link" data-toggle="tab" role="tab">Статьи</a>
+			</div>
+
+			<!-- Tabs content -->
+			<div class="tab-content" role="tablist">
+
+				<!-- Articles Tab -->
+				<div id="articles-tab" class="tab-pane fade show active" role="tabpanel">
+					<!-- News list -->
+					<div class="row">
+						<div class="col-3">
+							@@include('parts/article-cards/article-1.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-2.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-3.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-4.html')
+						</div><!-- /.col -->
+					</div><!-- /.row -->
+					<!-- Button -->
+					<div class="mt-40 text-center">
+						<a href="#" class="btn btn-corner">Все новости</a>
+					</div>
+				</div><!-- /.tab-pane -->
+
+				<!-- News Tab -->
+				<div id="news-tab" class="tab-pane fade" role="tabpanel">
+					<!-- Articles list -->
+					<div class="row">
+						<div class="col-3">
+							@@include('parts/article-cards/article-3.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-4.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-1.html')
+						</div><!-- /.col -->
+						<div class="col-3">
+							@@include('parts/article-cards/article-2.html')
+						</div><!-- /.col -->
+					</div><!-- /.row -->
+					<!-- Button -->
+					<div class="mt-40 text-center">
+						<a href="#" class="btn btn-corner">Все статьи</a>
+					</div>
+				</div><!-- /.tab-pane -->
+			</div>
+			<!-- End Tabs content -->
+
 		</div><!-- /.container -->
 	</section>
 
