Home page (sections 9 of 9) & Footer. Added spacers mixin. Code refactoring

--- a/app/page-home.html
+++ b/app/page-home.html
@@ -635,10 +635,10 @@
 		</div><!-- /.container -->
 	</section>
 
-	<!-- Section: Template -->
-	<section class="template mt-80">
+	<!-- Section: SEO article -->
+	<section class="seo-article mt-120">
 		<div class="container">
-			
+			@@include('parts/seo-article.html')
 		</div><!-- /.container -->
 	</section>
 
