--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,3 +1,124 @@
+	<!-- Site footer -->
+	<footer class="footer">
+		<div class="footer-main">
+			<div class="container">
+				<div class="row row-items-32 justify-content-between">
+					<div class="col-lg-3">
+						<div class="footer-intro">
+							<div class="logo">
+								<a href="index.html" rel="home">
+									<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
+								</a>
+							</div><!-- /.logo -->
+							<div class="stores">
+								<div class="stores-header" id="footer-stores-title">
+									<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#footer-stores" aria-expanded="true" aria-controls="footer-stores">
+										<span>Салоны</span>
+										<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
+									</button>
+								</div>
+								<div class="stores-content collapse show" id="footer-stores" aria-labelledby="footer-stores-title">
+									<div class="stores-body">
+										<div class="stores-item">
+											<span>Волоколамское шоссе</span>
+											<p>г. Москва, инд.: 125371, ул. Волоколамское шоссе, д. 116, стр. 1</p>
+											<p>Без выходных<br> с 10:00 до 19:00</p>
+										</div>
+										<div class="stores-item">
+											<span>Калужское шоссе</span>
+											<p>г. Москва, инд.: 108841, ул. Калужское шоссе, д. 4, стр. 9</p>
+											<p>Без выходных<br> с 10:00 до 18:00</p>
+										</div>
+									</div>
+								</div>
+							</div><!-- /.stores -->
+							<div class="payments">
+								<img src="./images/payments.svg" alt="Мы принимаем платежи">
+							</div><!-- /.payments -->
+						</div><!-- /.footer-intro -->
+					</div><!-- /.col -->
+					<div class="col-sm-6 col-lg-2">
+						<div class="footer-nav">
+							<div class="footer-title">Каталог</div>
+							<ul class="footer-nav-list">
+								<li><a href="#">Плитка</a></li>
+								<li><a href="#">Плитка для ванной</a></li>
+								<li><a href="#">Плитка для кухни</a></li>
+								<li><a href="#">Керамогранит</a></li>
+								<li><a href="#">Мозаика</a></li>
+								<li><a href="#">Ступени</a></li>
+								<li><a href="#">Натуральный камень</a></li>
+								<li><a href="#">Сантехника</a></li>
+								<li><a href="#">Сопутствующие товары</a></li>
+							</ul>
+						</div><!-- /.footer-nav -->
+					</div><!-- /.col -->
+					<div class="col-sm-6 col-lg-2">
+						<div class="footer-nav">
+							<div class="footer-title">Для клиента</div>
+							<ul class="footer-nav-list">
+								<li><a href="#">Доставка</a></li>
+								<li><a href="#">Оплата</a></li>
+								<li><a href="#">3D дизайн</a></li>
+								<li><a href="#">Карта сайта</a></li>
+							</ul>
+						</div><!-- /.footer-nav -->
+					</div><!-- /.col -->
+					<div class="col-sm-6 col-lg-2">
+						<div class="footer-nav">
+							<div class="footer-title">Компания</div>
+							<ul class="footer-nav-list">
+								<li><a href="#">О нас</a></li>
+								<li><a href="#">Реквизиты</a></li>
+								<li><a href="#">Политика конфиденциальности</a></li>
+							</ul>
+						</div><!-- /.footer-nav -->
+					</div><!-- /.col -->
+					<div class="col-sm-6 col-lg-3">
+						<div class="footer-contacts">
+							<div class="phone">
+								<a href="tel:+79262255096" title="Позвонить">+7 (926) 225-50-96 <i class="whatsapp"></i><i class="viber"></i></a>
+							</div><!-- /.phone -->
+							<div class="phone">
+								<a href="tel:+74952255096" title="Позвонить">+7 (495) 225-50-96</a>
+								<button type="button" class="phone-callback btn">
+									<svg class="icon icon-support"><use xlink:href="./images/symbol-defs.svg#support"></use></svg>
+									<span>Перезвоните мне</span>
+								</button>
+							</div><!-- /.phone -->
+							<div class="phone">
+								<a href="tel:+79262255096" title="Позвонить">8-800-555-55-55</a>
+								<div class="phone-text">Бесплатно по России</div>
+							</div><!-- /.phone -->
+							<div class="mail">
+								<a href="mailto:zakaz@aplitka.ru" title="Написать письмо">zakaz@aplitka.ru</a>
+							</div><!-- /.mail -->
+							<div class="social">
+								<div class="social-title">Мы в социальных сетях</div>
+								<div class="social-list">
+									<a href="#" target="_blank" rel="nofollow noopener">
+										<img src="./images/vk.svg" alt="ВКонтакте">
+									</a>
+									<a href="#" target="_blank" rel="nofollow noopener">
+										<img src="./images/youtube.svg" alt="YouTube">
+									</a>
+									<a href="#" target="_blank" rel="nofollow noopener">
+										<img src="./images/instagram.svg" alt="Instagram">
+									</a>
+								</div>
+							</div><!-- /.social -->
+						</div><!-- /.footer-contacts -->
+					</div><!-- /.col -->
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div><!-- /.footer-main-->
+		<div class="footer-copyright">
+			<div class="container">
+				<div class="text-300 text-xs text-center">&copy; ООО «Aplitka» 2007-2021</div>
+			</div><!-- /.container -->
+		</div><!-- /.footer-copyright -->
+	</footer>
+
 	<!-- Go up button -->
 	<div class="go-up" id="go-up-button">
 		<button class="go-up-btn btn">
