--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+	<!-- Site header -->
 	<header class="header">
 
 		<div class="header-top">
@@ -103,15 +104,15 @@
 					</div><!-- /.search -->
 					<div class="col-auto contacts">
 						<div class="phone">
-							<a href="tel:+79262255096">+7 (926) 225-50-96 <i class="whatsapp"></i><i class="viber"></i></a>
+							<a href="tel:+79262255096" title="Позвонить">+7 (926) 225-50-96 <i class="whatsapp"></i><i class="viber"></i></a>
 						</div>
 						<div class="mail">
-							<a href="mailto:zakaz@aplitka.ru">zakaz@aplitka.ru</a>
+							<a href="mailto:zakaz@aplitka.ru" title="Написать письмо">zakaz@aplitka.ru</a>
 						</div>
 					</div><!-- /.contacts -->
 					<div class="col-auto callback">
 						<div class="callback-phone">
-							<a href="tel:+74952255096">+7 (495) 225-50-96</a>
+							<a href="tel:+74952255096" title="Позвонить">+7 (495) 225-50-96</a>
 						</div>
 						<button type="button" class="callback-btn btn">
 							<svg class="icon icon-support"><use xlink:href="./images/symbol-defs.svg#support"></use></svg>
